Changed animations, added polish description and some links. Fixed span text animation on smaller screens. Fixed font-size look on smaller screens

--- a/style.css
+++ b/style.css
@@ -299,15 +299,15 @@ h3.text-animation{
   }
   21%,
   40%{
-    content: "przygotowanie do egzaminów";
+    content: "lekcje indywidualne";
   }
   41%,
   60%{
-    content: "odrabianie prac domowych";
+    content: "zajęcia grupowe";
   }
   61%,
   80%{
-    content: "rozmówki po polsku";
+    content: "testy i egzaminy";
   }
   81%,
   100%{
@@ -545,7 +545,7 @@ h3.text-animation{
 }
 
 .experience-card:hover .card-inner {
-  transform: rotateY(180deg); /* Efekt obrotu po najechaniu */
+  transform: rotateY(180deg);
 }
 
 .card-front, .card-back {
@@ -555,12 +555,19 @@ h3.text-animation{
   backface-visibility: hidden;
   border-radius: 10px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
   padding: 2rem;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  text-align: center;
 }
-
+.card-back img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
 .card-front {
   background-color: var(--bg-color);
   color: var(--text-color);
@@ -584,6 +591,7 @@ h3.text-animation{
   text-align: center;
   line-height: 1.8;
   color: inherit;
+  margin-top: 3rem; /* Możesz dodatkowo zwiększyć odstęp nad paragrafem */
 }
 
 .contact {
@@ -832,5 +840,8 @@ h3.text-animation{
     font-size: 1.2rem; /* Jeszcze mniejszy rozmiar tekstu */
     padding: 0.6rem 1.5rem; /* Jeszcze mniejszy padding */
     box-shadow: 0 0 10px var(--main-color); /* Subtelniejszy cień */
+  }
+  h2.heading{
+    font-size: 6rem;
   }
 }
